--- a/src/Components/ProjectCard/projectСard.module.scss
+++ b/src/Components/ProjectCard/projectСard.module.scss
@@ -16,6 +16,7 @@
 
 .projectCardTitle {
 	font-size: 16px;
+	margin: 10px 0;
 }
 
 .removeProjectCard {
@@ -32,6 +33,13 @@
 	&:hover {
 		color: $blue;
 	}
+}
+
+.editProjectCardActive{
+	transition: 0.2s ease-in;
+	transform: scale(1.15);
+	cursor: pointer;
+	color: $green;
 }
 
 .projectCardButton {
