--- a/src/Components/TaskCard/taskCard.module.scss
+++ b/src/Components/TaskCard/taskCard.module.scss
@@ -1,6 +1,6 @@
 @import '../../Styles/variables';
 
-.taskCard{
+.card{
     border-radius: 10px;
     background-color: $black;
     color: $white;
